--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,13 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<h1><strong>W5</strong></h1><h1>Brython</h1>
+<h1>W5</h1>
+<p>// 包含標準輸出入程式庫的標頭文件<br/>// https://blog.csdn.net/weixin_38468077/article/details/101069365<br/>// http://www.gnuplot.info/demo/<br/>// https://github.com/sysprog21/rv32emu<br/>// https://github.com/sysprog21/semu <br/>// https://docs.google.com/presentation/d/14N0cWG2SnBSqhc2cLF0_2VerB9FF8JN3<br/>// https://cs61c.org/fa23/<br/>// https://greenteapress.com/wp/think-python-2e/<br/>// https://github.com/ecalvadi/c99-examples<br/>// https://github.com/gouravthakur39/beginners-C-program-examples<br/>// https://github.com/ergenekonyigit/Numerical-Analysis-Examples<br/>// https://www.che.ncku.edu.tw/facultyweb/changct/html/teaching/CPPandMATLAB/Past/pdf%20Files/Chap02-Ling.pdf<br/>// https://gteceducation.com.sg/Brochures/PROGRAMMING/C%20PROGRAMMING%20FULL.pdf<br/>// https://jsommers.github.io/cbook/cbook.pdf<br/>// https://jsommers.github.io/cbook/index.html<br/>// http://student.itee.uq.edu.au/courses/csse2310/CProgrammingNotes.pdf<br/>// http://cslibrary.stanford.edu/101/EssentialC.pdf<br/>// https://publications.gbdirect.co.uk/c_book/<br/>// https://www.fossil-scm.org/fossil-book/doc/2ndEdition/fossilbook.pdf<br/>// ***** execute on replit <br/>// cd downloads<br/>// cc gnuplot_ex1.c -o gnuplot_ex1<br/>// ./gnuplot_ex1<br/>#include &lt;stdio.h&gt;</p>
+<p>// 主函式<br/>int main() {<br/> // Start a Gnuplot process using popen<br/> FILE *gnuplotPipe = popen("gnuplot -persistent", "w");<br/> if (!gnuplotPipe) {<br/> fprintf(stderr, "Failed to start Gnuplot.\n");<br/> return 1;<br/> }</p>
+<p>// Use Gnuplot plotting commands, specify font and output as PNG<br/> fprintf(gnuplotPipe, "set terminal png font 'default,10' size 800,400\n");<br/> fprintf(gnuplotPipe, "set output './../images/gnuplot_ex1.png'\n");<br/> fprintf(gnuplotPipe, "plot sin(x)");<br/> // Close popen<br/> pclose(gnuplotPipe);</p>
+<p>return 0;<br/>}</p>
+<p><img alt="" height="400" src="/images/gnuplot_ex1.png" width="800"/></p>
+<p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"></a></p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -33,7 +40,7 @@
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
 <p>亦即將所有對應的 html 也使用 Brython 產生, 然後寫為 <a href="https://docs.python.org/3/tutorial/classes.html">class</a> 後, 在範例導入時透過 <a href="https://docs.python.org/3/tutorial/classes.html#instance-objects">instance</a> 引用.</p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">&lt;!-- 啟動 Brython --&gt;
+<pre class="brush:html;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">&lt;!-- 啟動 Brython --&gt;
 &lt;script&gt;
 window.onload=function(){
 brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
