--- a/content/.html
+++ b/content/.html
@@ -142,9 +142,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W5.html'>Next</a> >> W5<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<br /> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1></h1>
+<p>clear</p>
+<p>cd downloads</p>
+<p>cc gd_usa_flag.c -lgd -lm</p>
+<p>./a.out</p>
+<img alt="" height="211" src="./../images/usa_flag.png" width="400"/>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
