--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<h1>W5</h1>
+<h1>w5</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
 // https://blog.csdn.net/weixin_38468077/article/details/101069365
 // http://www.gnuplot.info/demo/
@@ -50,7 +50,8 @@ return 0;
 <p>cc gnmplot_ex1.c</p>
 <p>./a.out</p>
 <p><img alt="" height="200" src="/images/gnuplot_ex1.png" width="400"/></p>
-<br/><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"></a>W6
+<h1>w6</h1>
+<p></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -138,7 +139,7 @@ void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, 
 <p>cd downloads</p>
 <p>cc gd_roc_flag.c -lgd -lm</p>
 <p><span>./a.out</span></p>
-<img alt="" height="267" src="/images/roc_flag.png" width="400"/>
+<p><img alt="" height="267" src="/images/roc_flag.png" width="400"/></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -227,12 +228,11 @@ void draw_star(gdImagePtr img, int x, int y, int size, int color, double rotatio
     // 用指定的颜色填充星星
     gdImageFilledPolygon(img, points, 10, color);
 }</pre>
-<h1><span> </span></h1>
-<p>clear</p>
+<p><br/>clear</p>
 <p>cd downloads</p>
 <p>cc gd_usa_flag.c -lgd -lm</p>
 <p>./a.out</p>
-<img alt="" height="211" src="/images/usa_flag.png" width="400"/>
+<p><img alt="" height="211" src="/images/usa_flag.png" width="400"/></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
