--- a/content/w6.html
+++ b/content/w6.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W5.html'>W5</a><li><a href='.html'></a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,57 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='.html'>Next</a> >> <br /><h1>W5</h1>
-<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
-// https://blog.csdn.net/weixin_38468077/article/details/101069365
-// http://www.gnuplot.info/demo/
-// https://github.com/sysprog21/rv32emu
-// https://github.com/sysprog21/semu
-// https://docs.google.com/presentation/d/14N0cWG2SnBSqhc2cLF0_2VerB9FF8JN3
-// https://cs61c.org/fa23/
-// https://greenteapress.com/wp/think-python-2e/
-// https://github.com/ecalvadi/c99-examples
-// https://github.com/gouravthakur39/beginners-C-program-examples
-// https://github.com/ergenekonyigit/Numerical-Analysis-Examples
-// https://www.che.ncku.edu.tw/facultyweb/changct/html/teaching/CPPandMATLAB/Past/pdf%20Files/Chap02-Ling.pdf
-// https://gteceducation.com.sg/Brochures/PROGRAMMING/C%20PROGRAMMING%20FULL.pdf
-// https://jsommers.github.io/cbook/cbook.pdf
-// https://jsommers.github.io/cbook/index.html
-// http://student.itee.uq.edu.au/courses/csse2310/CProgrammingNotes.pdf
-// http://cslibrary.stanford.edu/101/EssentialC.pdf
-// https://publications.gbdirect.co.uk/c_book/
-// https://www.fossil-scm.org/fossil-book/doc/2ndEdition/fossilbook.pdf
-// ***** execute on replit
-// cd downloads
-// cc gnuplot_ex1.c -o gnuplot_ex1
-// ./gnuplot_ex1
-#include &lt;stdio.h&gt;
-
-// 主函式
-int main() {
-// Start a Gnuplot process using popen
-FILE *gnuplotPipe = popen("gnuplot -persistent", "w");
-if (!gnuplotPipe) {
-fprintf(stderr, "Failed to start Gnuplot.\n");
-return 1;
-}
-
-// Use Gnuplot plotting commands, specify font and output as PNG
-fprintf(gnuplotPipe, "set terminal png font 'default,10' size 800,400\n");
-fprintf(gnuplotPipe, "set output './../images/gnuplot_ex1.png'\n");
-fprintf(gnuplotPipe, "plot sin(x)");
-// Close popen
-pclose(gnuplotPipe);
-
-return 0;
-}</pre>
+    <div id="tipue_search_content">w5 << <a href='w5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w6</h1>
 <p></p>
-<p>clear</p>
-<p>cd downloads </p>
-<p>cc gnmplot_ex1.c</p>
-<p>./a.out</p>
-<p><img alt="" height="200" src="./../images/gnuplot_ex1.png" width="400"/></p>
-<br/><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"></a>W6
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -280,7 +231,7 @@ void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, 
 <p>cd downloads</p>
 <p>cc gd_roc_flag.c -lgd -lm</p>
 <p><span>./a.out</span></p>
-<img alt="" height="267" src="./../images/roc_flag.png" width="400"/>
+<p><img alt="" height="267" src="./../images/roc_flag.png" width="400"/></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -369,7 +320,12 @@ void draw_star(gdImagePtr img, int x, int y, int size, int color, double rotatio
     // 用指定的颜色填充星星
     gdImageFilledPolygon(img, points, 10, color);
 }</pre>
-<br />About << <a href='About.html'>Previous</a> <a href='.html'>Next</a> >> </div>
+<p><br/>clear</p>
+<p>cd downloads</p>
+<p>cc gd_usa_flag.c -lgd -lm</p>
+<p>./a.out</p>
+<p><img alt="" height="211" src="./../images/usa_flag.png" width="400"/></p>
+<br />w5 << <a href='w5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
