--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -939,8 +939,8 @@ return 1;
     return 0;
 }</pre>
 <p>cc hellogd.c -lgd -lm</p>
-<p>./a.out </p>
-<br/><br/><img alt="" height="300" src="/images/hellogd.png" width="400"/><br/>Brython
+<p>./a.out <br/><br/><img alt="" height="300" src="/images/hellogd.png" width="400"/></p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
