--- a/config/content.htm
+++ b/config/content.htm
@@ -1147,6 +1147,428 @@ circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5);
 }</pre>
 <p><span><img alt="" height="267" src="/images/roc_flag_in_gd.png" width="400"/></span></p>
 <p><span>cd downloads</span><br/><span>cc<span> roc_list_coord_flag</span></span><span>.c</span><span><span> </span>-lgd -lm</span><br/><span>./a.out</span></p>
+<h1>ANSIC</h1>
+<h4>姓名、出生日期和手機號碼</h4>
+<div>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main()  
+{
+    // 列印姓名
+    printf("Name   : James II \n"); 
+
+    // 列印出生日期
+    printf("DOB    : March 12, 2005\n"); 
+
+    // 列印手機號碼
+    printf("Mobile : 99-9999999999\n"); 
+
+    // 表示執行成功
+    return(0); 
+}</pre>
+</div>
+<p><img alt="" height="115" src="/images/螢幕擷取畫面 2023-12-28 020026.png" width="266"/></p>
+<p><span>寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</span></p>
+<div>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt; 
+
+/* 
+   Variables to store the width and height of a rectangle in inches 
+*/
+int width;          
+int height;         
+
+int area;           /* Variable to store the area of the rectangle */
+int perimeter;      /* Variable to store the perimeter of the rectangle */
+
+int main() {
+    /* Assigning values to height and width */
+    height = 10;
+    width = 10;
+
+    /* Calculating the perimeter of the rectangle */
+    perimeter = 2*(height + width);
+    printf("Perimeter of the rectangle = %d inches\n", perimeter);
+
+    /* Calculating the area of the rectangle */
+    area = height * width;
+    printf("Area of the rectangle = %d square inches\n", area);
+
+    return(0);
+}</pre>
+</div>
+<div><img alt="" height="100" src="/images/2.png" width="396"/></div>
+<div>反轉數字</div>
+<div>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
+
+// 定義反轉整數的函式
+int reverse(int n) {
+    int d, y = 0;
+    while (n) {
+        d = n % 10;
+        // 檢查溢位情況，以確保反轉後的整數仍在 int 範圍內
+        if ((n &gt; 0 &amp;&amp; y &gt; (0x7fffffff - d) / 10) ||
+            (n &lt; 0 &amp;&amp; y &lt; ((signed)0x80000000 - d) / 10)) {
+            return 0;  // 如果溢位，則返回 0
+        }
+        y = y * 10 + d;
+        n = n / 10;
+    }
+    return y;  // 返回反轉後的整數
+}
+
+int main(void)
+{
+    int i = 321;
+    printf("原始整數: %d  ", i);
+    printf("\n反轉後的整數: %d  ", reverse(i));
+
+    return 0;
+}</pre>
+<span></span></div>
+<div><span><img alt="" height="98" src="/images/3.png" width="370"/></span></div>
+<div><span>日期轉換為年、週和日</span></div>
+<div>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main()
+{
+    int days, years, weeks;
+
+    days = 3569; // Total number of days
+
+    // Converts days to years, weeks and days
+    years = days/365; // Calculate years
+    weeks = (days % 365)/7; // Calculate weeks
+    days = days - ((years*365) + (weeks*7)); // Calculate remaining days
+
+    // Print the results
+    printf("Years: %d\n", years);
+    printf("Weeks: %d\n", weeks);
+    printf("Days: %d \n", days);
+
+    return 0;
+}</pre>
+<span><img alt="" height="110" src="/images/4.png" width="290"/></span></div>
+<div><span></span></div>
+<p>總和</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;
+
+// 宣告函式原型
+int sumOfRange(int);
+
+int main() 
+{
+   int n1;
+   int sum;
+
+   // 提示用戶輸入範圍的最後一個數字
+   printf("\n\n 遞迴 : 計算從1到n的數字總和 :\n");
+   printf("-----------------------------------------------------------\n");    
+
+   printf(" 輸入範圍的最後一個數字（起始數字為1） : ");
+   scanf("%d", &amp;n1);
+
+   // 呼叫函式計算總和
+   sum = sumOfRange(n1); 
+   printf("\n 1 到 %d 的數字總和 : %d\n\n", n1, sum);
+
+   return (0);
+}
+
+// 定義計算範圍內數字總和的函式
+int sumOfRange(int n1) 
+{
+   int res;
+   if (n1 == 1) 
+   {
+      return (1);
+   } 
+   else 
+   {
+      // 遞迴呼叫 sumOfRange 函式
+      res = n1 + sumOfRange(n1 - 1);
+   }
+   return (res);
+}</pre>
+<p></p>
+<p></p>
+<p><img alt="" height="231" src="/images/5.png" width="572"/></p>
+<p>列出前60個自然數</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;
+int  numPrint(int);
+int main()
+{
+    int n = 1;
+    printf("\n\n Recursion : print first 50 natural numbers :\n");
+    printf("-------------------------------------------------\n"); 
+    printf(" The natural numbers are :");
+    numPrint(n);
+    printf("\n\n");
+    return 0;
+}
+int numPrint(int n)
+{
+    if(n&lt;=60)
+    {
+         printf(" %d ",n);
+         numPrint(n+1);
+    }
+}</pre>
+<p><img alt="" height="128" src="/images/6.png" width="400"/></p>
+<p>輸入年份產生日曆</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;string.h&gt;
+
+// 定義版面大小
+int width = 40, year;
+int cols, lead, gap;
+
+// 星期幾
+const char *wdays[] = { "Su", "Mo", "Tu", "We", "Th", "Fr", "Sa" };
+
+// 每個月有幾天
+struct months {
+  const char *name;
+  int days, start_wday, at;
+} months[12] = {
+  { "January",  31, 0, 0 },
+  { "February", 28, 0, 0 },
+  { "March",    31, 0, 0 },
+  { "April",    30, 0, 0 },
+  { "May",  31, 0, 0 },
+  { "June", 30, 0, 0 },
+  { "July", 31, 0, 0 },
+  { "August",   31, 0, 0 },
+  { "September",    30, 0, 0 },
+  { "October",  31, 0, 0 },
+  { "November", 30, 0, 0 },
+  { "December", 31, 0, 0 }
+};
+
+// 間距
+void space(int n) { while (n-- &gt; 0) putchar(' '); }
+
+// 初始化月份資訊
+void init_months()
+{
+  int i;
+
+  // 判斷閏年
+  if ((!(year % 4) &amp;&amp; (year % 100)) || !(year % 400))
+    months[1].days = 29;
+
+  // 計算每個月份的起始星期幾
+  year--;
+  months[0].start_wday = (year * 365 + year/4 - year/100 + year/400 + 1) % 7;
+
+  for (i = 1; i &lt; 12; i++)
+    months[i].start_wday = (months[i-1].start_wday + months[i-1].days) % 7;
+
+  // 計算列數和間距
+  cols = (width + 2) / 22;
+  while (12 % cols) cols--;
+  gap = cols - 1 ? (width - 20 * cols) / (cols - 1) : 0;
+  if (gap &gt; 4) gap = 4;
+  lead = (width - (20 + gap) * cols + gap + 1) / 2;
+  year++;
+}
+
+// 輸出日曆
+void print_row(int row)
+{
+  int c, i, from = row * cols, to = from + cols;
+
+  // 輸出月份
+  space(lead);
+  for (c = from; c &lt; to; c++) {
+    i = strlen(months[c].name);
+    space((20 - i)/2);
+    printf("%s", months[c].name);
+    space(20 - i - (20 - i)/2 + ((c == to - 1) ? 0 : gap));
+  }
+  putchar('\n');
+
+  // 輸出星期幾
+  space(lead);
+  for (c = from; c &lt; to; c++) {
+    for (i = 0; i &lt; 7; i++)
+      printf("%s%s", wdays[i], i == 6 ? "" : " ");
+    if (c &lt; to - 1) space(gap);
+    else putchar('\n');
+  }
+
+  // 輸出日期
+  while (1) {
+    for (c = from; c &lt; to; c++)
+      if (months[c].at &lt; months[c].days) break;
+    if (c == to) break;
+
+    space(lead);
+    for (c = from; c &lt; to; c++) {
+      for (i = 0; i &lt; months[c].start_wday; i++) space(3);
+      while(i++ &lt; 7 &amp;&amp; months[c].at &lt; months[c].days) {
+        printf("%2d", ++months[c].at);
+        if (i &lt; 7 || c &lt; to - 1) putchar(' ');
+      }
+      while (i++ &lt;= 7 &amp;&amp; c &lt; to - 1) space(3);
+      if (c &lt; to - 1) space(gap - 1);
+      months[c].start_wday = 0;
+    }
+    putchar('\n');
+  }
+  putchar('\n');
+}
+
+// 輸出整年的日曆
+void print_year()
+{
+  int row;
+  char buf[32];
+  sprintf(buf, "%d", year);
+  space((width - strlen(buf)) / 2);
+  printf("%s\n\n", buf);
+  for (row = 0; row * cols &lt; 12; row++)
+    print_row(row);
+}
+
+// 檢查年份是否設置
+int main(int c, char **v)
+{
+  int i, year_set = 0;
+
+  // 讀取年份
+  printf("Input a valid year: ");
+  {
+    scanf ("%d", &amp;year);
+    for (i = 1; i &lt; c; i++) {
+  // 檢查是否有設定寬度參數
+   if (!strcmp(v[i], "-w")) {
+  if (++i == c || (width = atoi(v[i])) &lt; 20)
+          goto bail;
+      } else if (!year_set) {
+  // 讀取年份參數
+   if (!sscanf(v[i], "%d", &amp;year) || year &lt;= 0)
+          year = 1969;
+        year_set = 1;
+      } else
+        goto bail;
+    }
+
+    init_months();
+    print_year();
+    return 0;
+
+  bail:
+    fprintf(stderr, "bad args\nUsage: %s year [-w width (&gt;= 20)]\n", v[0]);
+    exit(1);
+  }
+}</pre>
+<p><img alt="" height="473" src="/images/7-1.png" width="400"/></p>
+<p><img alt="" height="368" src="/images/7-2.png" width="400"/></p>
+<p><img alt="" height="329" src="/images/7-3.png" width="400"/></p>
+<p>猜數字</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;     // 包括標準輸入/輸出頭檔。
+#include&lt;stdlib.h&gt;    // 包含標準庫頭檔。
+#include&lt;time.h&gt;      // 包含用於產生隨機數的時間頭檔。
+int main ()           // 主函數開始。
+{
+int number, input;   // 宣告兩個整數變數「number」和「input」。
+srand ( time(NULL) );   // 使用當前時間初始化隨機種子。
+
+number = rand() % 10 + 1;   // 產生 1 到 10 之間的隨機數並將其儲存在「number」中。
+
+do {   // do-while 循環的開始。
+printf ("\nGuess the number (1 to 10): ");   // 列印一則訊息，提示使用者猜測數字。
+scanf ("%d",&amp;input);    // 讀取用戶的輸入並將其儲存在“input”中。
+
+if (number &gt; input)   // 如果隨機數大於使用者輸入。
+printf ("The number is higher\n");   // 列印一條訊息，表示該數字更大。
+
+    } while (number!=input);   // 只要使用者的輸入不等於隨機數就繼續循環。
+
+printf ("That is correct!\n\n");   // 列印一條訊息，表示用戶猜對了。
+
+return 0;   // 返回0表示程式執行成功。
+}   // 主函數結束。</pre>
+<p><img alt="" height="139" src="/images/8.png" width="400"/></p>
+<p>判斷三角形</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt; // 包含標準輸入/輸出的標頭文件。
+
+int main()
+{
+int sidea, sideb, sidec; // 宣告三角形的三邊的變數。
+
+/*
+* 讀取三角形的三邊長
+*/
+printf("輸入三角形的三邊長: "); // 提示使用者輸入。
+scanf("%d %d %d", &amp;sidea, &amp;sideb, &amp;sidec); // 讀取並儲存三角形的三邊。
+
+if (sidea == sideb &amp;&amp; sideb == sidec) // 檢查是否所有邊都相等。
+{
+printf("這是一個等邊三角形。\n"); // 印出等邊三角形的訊息。
+}
+else if (sidea == sideb || sidea == sidec || sideb == sidec) // 檢查是否有兩邊相等。
+{
+printf("這是一個等腰三角形。\n"); // 印出等腰三角形的訊息。
+}
+else // 如果沒有邊相等。
+{
+printf("這是一個不等邊三角形。\n"); // 印出不等邊三角形的訊息。
+}
+
+return 0;
+}</pre>
+<p><img alt="" height="115" src="/images/9.png" width="400"/></p>
+<p><span>檢查一個數字是否為質數</span></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
+
+// 函式原型：檢查一個數字是否為質數
+int PrimeOrNot(int);
+
+int main()
+{
+    int n1, prime;
+
+    // 提示用戶輸入正整數
+    printf("\n\n 函式：檢查一個數字是否為質數：\n");
+    printf("---------------------------------------------------------------\n");    
+
+    printf(" 輸入一個正整數 : ");
+    scanf("%d", &amp;n1);
+
+    // 呼叫函式 PrimeOrNot 檢查是否為質數
+    prime = PrimeOrNot(n1);
+
+    if (prime == 1)
+        printf(" 數字 %d 是一個質數。\n", n1);
+    else
+        printf(" 數字 %d 不是質數。\n", n1);
+
+    return 0;
+}
+
+// 函式定義：檢查一個數字是否為質數
+int PrimeOrNot(int n1)
+{
+    int i = 2;
+
+    // 使用迴圈從2開始檢查是否有因數
+    while (i &lt;= n1 / 2)
+    {
+        if (n1 % i == 0)
+            return 0; // 若有因數，返回0表示不是質數
+        else
+            i++;
+    }
+
+    return 1; // 若沒有因數，返回1表示是質數
+}
+</pre>
+<p><img alt="" height="133" src="/images/10.png" width="400"/></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
@@ -1312,7 +1734,7 @@ doc["add1to100"].bind('click', add)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div1"></div>
-<!-- editor1 結束 --><hr/><!-- ########################################## -->
+<!-- editor1 結束 --><hr class="custom-cursor-default-hover"/><!-- ########################################## -->
 <p>從 1 累加到 100 part2:</p>
 <p><button id="add1to100part2">1 add to 100</button><button id="cango_three_gears">cango_three_gears</button><button id="bsnake">BSnake</button><button id="aitetris">AI Tetris</button><button id="threejsblock">Rotating Block</button></p>
 <p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src2"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
