--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='ANSIC.html'>ANSIC</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='1.姓名、出生日期和手機號碼.html'>1.姓名、出生日期和手機號碼</a><li><a href='2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積.html'>2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</a><li><a href='3.反轉數字.html'>3.反轉數字</a><li><a href='4.日期轉換為年、週和日.html'>4.日期轉換為年、週和日</a><li><a href='5.總和.html'>5.總和</a><li><a href='6.列出前60個自然數.html'>6.列出前60個自然數</a><li><a href='7.輸入年份產生日曆.html'>7.輸入年份產生日曆</a><li><a href='8.猜數字.html'>8.猜數字</a><li><a href='9.判斷三角形.html'>9.判斷三角形</a><li><a href='10.檢查一個數字是否為質數.html'>10.檢查一個數字是否為質數</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">ANSIC << <a href='ANSIC.html'>Previous</a> <br /><h1>Brython</h1>
+    <div id="tipue_search_content">10.檢查一個數字是否為質數 << <a href='10.檢查一個數字是否為質數.html'>Previous</a> <br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -429,7 +429,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />ANSIC << <a href='ANSIC.html'>Previous</a> </div>
+</p><br />10.檢查一個數字是否為質數 << <a href='10.檢查一個數字是否為質數.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
